[package]
name = "audio_feature"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "5"
rodio = "0.13"
itertools = "0.10"

[dev-dependencies]
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
plotly = "0.6.0"

# used to plot features to check if everything 
# is working
